fix button spacing

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ h1 {
 }
 
 .controls .button {
-    margin-right: 20px;
+    margin-right: 15px;
     cursor: pointer;
     display: inline-block;
     padding: 12px 18px;
